--- a/go-gin-auth/.env
+++ b/go-gin-auth/.env
@@ -1,3 +1,4 @@
-MONGOURI=mongodb+srv://codewithkarthikg:Football%402023@cluster0.wkzkzus.mongodb.net/?retryWrites=true &
+MONGOURI=mongodb+srv://codewithkarthikg:Footb3@cluster0.wkzkzus.mongodb.net/?retryWrites=true &
 w=majority &
 appName=Cluster0
+#this env file is just an example and contains the wrong password for the database cluster  in the connection_string haha :)
